--- a/scss/2-Scenes/_day.scss
+++ b/scss/2-Scenes/_day.scss
@@ -45,6 +45,7 @@
 .birdcage {
     display: none;
     height: 50rem;
+    overflow: hidden;
     position: absolute;
     width: 100%;
     top: 15%;
