--- a/scss/2-Scenes/_night.scss
+++ b/scss/2-Scenes/_night.scss
@@ -7,12 +7,12 @@
         display: none;
         position: absolute;
         left: 0;
-        top: -15%;
+        // top: -15%;
         width: 10rem;
 
         @include respond(tab-port) {
             left: 0;
-            top: -31%;
+            // top: -31%;
             width: auto;
         }
     }
