--- a/scss/3-Components/_box.scss
+++ b/scss/3-Components/_box.scss
@@ -7,7 +7,7 @@
     background-image: url('../resources/img/bg_day.png');
     background-size: cover;
     background-position: left;
-    height: 100vh;
+    height: 120vh;
     position: absolute;
     width: 100%;
     z-index: -1;
@@ -40,7 +40,7 @@
     flex-direction: column;
     justify-content: flex-end;
     margin: 0 auto;
-    height: 90vh;
+    height: 110vh;
     padding: 1rem;
     width: clamp(30rem, 90%, 35rem);
 
